force-app/main/default/objects/employment_website__c/employment_website__c.object-meta.xml
<CustomObject>
    <label>employment website</label>
    <nameField>
        <label>employment website Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>employment websites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>