force-app/main/default/objects/employment_website__c/fields/max_budget__c.field-meta.xml
<CustomField>
    <fullName>max_budget__c</fullName>
    <label>max budget</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>