force-app/main/default/objects/employment_website__c/fields/price_per_cost__c.field-meta.xml
<CustomField>
    <fullName>price_per_cost__c</fullName>
    <label>price per cost</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>