force-app/main/default/objects/employment_website__c/fields/web_address__c.field-meta.xml
<CustomField>
    <fullName>web_address__c</fullName>
    <label>web address</label>
    <required>true</required>
    <type>Url</type>
</CustomField>